Fix dark mode for comments

--- a/src/components/CommentList/Comment/Comment.module.scss
+++ b/src/components/CommentList/Comment/Comment.module.scss
@@ -71,6 +71,7 @@
 
   &.dark {
     border-color: $gray-800;
+    background-color: $gray-800;
 
     .header {
       .userInfo {
